# aws-cdk-game-stacks

./: .gitignore  README.md  app.py  cdk.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml  python-format.yml
lambda/: asg_set_desired_capacity.py  ecs_desired_task_count.py  ecs_update_r53.py
lib/: config.py
lib/aws_common/: _lambda.py  ec2.py  ecs.py  efs.py  events.py  iam.py
lib/config/: __init__.py  minecraft.py
lib/constructs/: traefik.py
lib/stacks/: game_stack.py  minecraft_stack.py
test/: conftest.py
test/stacks/: test_game_stack.py  test_minecraft_stack.py
