[tool.poetry]
name = "aws-cdk-game-stacks"
version = "0.1.0"
description = "CDK game stacks"
authors = ["Lucas Messenger <1335960+layertwo@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "lib" },
    { include = "lambda" }
]


[tool.poetry.dependencies]
python = "^3.9"
aws-cdk-lib = "^2.117.0"
constructs = "^10.3.0"
boto3 = "^1.34.11"
awsipranges = "^0.3.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.0"
black = "^23.11.0"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line_length = 100


[tool.isort]
known_first_party = "lib"
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
combine_as_imports = false
skip = [".git", "cdk.out", "venv"]


[tool.flake8]
exclude = "cdk.out"
ignore = ["E203", "W503", "E501"]
max_line_length = 100


[tool.pytest.ini_options]
addopts = "--cov=lib --cov=lambda --cov-report term-missing --verbose"
